--- a/src/app/roadmap/roadmap.component.css
+++ b/src/app/roadmap/roadmap.component.css
@@ -1,17 +1,18 @@
-.example-list {
-  width: 500px;
+.roadmap-list {
+  width: 1000px;
   max-width: 100%;
   border: solid 1px #ccc;
   min-height: 60px;
-  display: block;
+  display: flex;
+  flex-direction: row;
   background: white;
   border-radius: 4px;
   overflow: hidden;
 }
 
-.example-box {
+.box {
   padding: 20px 10px;
-  border-bottom: solid 1px #ccc;
+  border-right: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
@@ -21,6 +22,8 @@
   cursor: move;
   background: white;
   font-size: 14px;
+  flex-grow: 1;
+  flex-basis: 0;
 }
 
 .cdk-drag-preview {
