--- a/src/app/roadmap/roadmap.component.html
+++ b/src/app/roadmap/roadmap.component.html
@@ -1,3 +1,3 @@
-<div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-  <div class="example-box" *ngFor="let movie of movies" cdkDrag>{{movie}}</div>
+<div cdkDropList class="roadmap-list" cdkDropListOrientation="horizontal" (cdkDropListDropped)="drop($event)">
+  <div class="box" *ngFor="let movie of movies" cdkDrag>{{movie}}</div>
 </div>
