--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="page">
       <app-sidebar></app-sidebar>
       <div class="content">
-        <div>Main page</div>
+        <app-counter start="100"></app-counter>
 
       </div>
 </div>
