--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,8 +1,7 @@
-<p>counter works!</p>
 
-<div>{{this.counterValue}}</div>
+<div class="counter">
+    <div class="foreground">{{this.counterValue}}</div>
+  <div class="background"></div>
 
+</div>
 
-<input type="range" min="0" (onchange)="update($event.target.value)" max="100"/>
-
-{{this.speed}}
