--- a/src/app/counter/counter.component.css
+++ b/src/app/counter/counter.component.css
@@ -15,16 +15,16 @@
 
 .counter .background {
   position: absolute;
-  top: 0px;
-  left: 0px;
-  background:blueviolet;
-  height: 60px;
-  width: 20px;
+  border-left: 5px solid transparent;
+  border-right: 15px solid transparent;
+  border-top: 150px solid black;
+  height: 0px;
+  width: 0px;
   animation-name: time;
-  animation-duration: 1s; /* or: Xms */
+  animation-duration: 1s;
   animation-iteration-count: infinite;
-  animation-timing-function: linear; /* or: ease, ease-in, ease-in-out, linear, cubic-bezier(x1, y1, x2, y2) */
-  animation-fill-mode: forwards; /* or: backwards, both, none */
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
 }
 
 @keyframes time {
