--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,7 +1,13 @@
 
 <div class="counter">
     <div class="foreground">{{this.counterValue}}</div>
-  <div class="background"></div>
-
 </div>
 
+<div class="clock">
+  <div class="case">
+    <div class="crystal">
+      <div class="hour"></div>
+      <div class="minute"></div>
+    </div>
+  </div>
+</div>
