--- a/src/app/counter/counter.component.css
+++ b/src/app/counter/counter.component.css
@@ -13,19 +13,6 @@
   z-index: 1;
 }
 
-.counter .background {
-  position: absolute;
-  border-left: 5px solid transparent;
-  border-right: 15px solid transparent;
-  border-top: 150px solid black;
-  height: 0px;
-  width: 0px;
-  animation-name: time;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  animation-fill-mode: forwards;
-}
 
 @keyframes time {
   from {
@@ -34,4 +21,57 @@
   to{
     transform: rotate(360deg);
   }
+}
+
+
+.case {
+  position: relative;
+  border-radius: 50%;
+  background: gray;
+  width: 100px;
+  height: 100px;
+}
+
+.crystal {
+  position: absolute;
+  border-radius: 50%;
+  width: 90%;
+  height: 90%;
+  background: white;
+  margin: 5px 0px 0px 5px;
+}
+
+.hour {
+  width: 0;
+  height: 0;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 40px solid gold;
+  margin: 0px 0px 0px 40px;
+
+  animation-name: time;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  transform: rotate(360deg);
+  transform-origin: bottom center;
+}
+
+.minute {
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-top: 40px solid lawngreen;
+  margin: 0px 0px 0px 40px;
+
+  animation-name: time;
+  animation-duration: 50s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  transform: rotate(360deg);
+  transform-origin: top center;
 }
